View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025652 | Open CASCADE | OCCT:Visualization | public | 2014-12-24 08:54 | 2015-05-14 15:31 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025652: Visualization, TKOpenGl - RayTracing initialization failures are not properly reported | ||||
Description | User is unable to provide sufficient information about Ray-Tracing initialization failures. | ||||
Steps To Reproduce | Test case 1 - initialization on insufficient OpenGL context:pload MODELING VISUALIZATION vcaps -softMode 1 vinit View1 vclear vaxo vsetdispmode 1 box b 1 2 3 vdisplay b vfit Expected result: error message with Ray-Tracing requirements. Actual result: no message is shown. Test case 2 - GLSL program compilation or linkage error. Expected result: error message should contain compilation/linkage issues provided by driver. Actual result: "Vertex shader(s) failed to link, fragment shader(s) failed to link" - printed error message is insufficient for analysis. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25652 has been created by dbp. SHA-1: e8ee1faca9536df1a37b18a795fd7d2f89400ad3 Detailed log of new commits: Author: dbp Date: Tue Mar 17 15:13:16 2015 +0300 0025652: Visualization, TKOpenGl - RayTracing initialization failures are not properly reported |
|
Branch CR25652 has been updated by dbp. SHA-1: 1e39137dbf0180765938411d92d79847611ce536 Detailed log of new commits: Author: dbp Date: Thu Mar 19 10:47:09 2015 +0300 Logging of GLSL warnings was added in ray-tracing core. |
|
Dear kgv, logging of warnings was added. Please review the patch in branch CR25652. |
|
Please test the patch. |
|
Branch CR25652 has been updated forcibly by apv. SHA-1: 814ae3f7b8a41b81697e40d6ac2514744987d669 |
|
Branch CR25652 has been rebased on the current master |
|
Dear BugMaster, Branch CR25652 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 814ae3f7b8a41b81697e40d6ac2514744987d669 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 88249591 / 88537766 [-0.33%] Total CPU difference: 53490.30999999987 / 53186.43000000024 [+0.57%] Testing on Windows: Total MEMORY difference: 56834929 / 56847647 [-0.02%] Total CPU difference: 16027.667540799664 / 16072.67382929974 [-0.28%] |
|
Branch CR25652 has been deleted by kgv. SHA-1: 814ae3f7b8a41b81697e40d6ac2514744987d669 |
occt: master 07039714 2015-03-26 12:22:12
Committer: apn Details Diff |
0025652: Visualization, TKOpenGl - RayTracing initialization failures are not properly reported Logging of GLSL warnings was added in ray-tracing core. |
Affected Issues 0025652 |
|
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace_Raytrace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-24 08:54 | kgv | New Issue | |
2014-12-24 08:54 | kgv | Assigned To | => kgv |
2014-12-24 08:55 | kgv | Assigned To | kgv => duv |
2014-12-24 08:55 | kgv | Product Version | => 6.8.0 |
2014-12-24 08:55 | kgv | Assigned To | duv => dbp |
2014-12-24 08:55 | kgv | Status | new => assigned |
2015-01-28 08:44 | kgv | Relationship added | related to 0025758 |
2015-03-17 15:15 | git | Note Added: 0038432 | |
2015-03-19 10:47 | git | Note Added: 0038677 | |
2015-03-19 10:49 |
|
Note Added: 0038678 | |
2015-03-19 10:49 |
|
Assigned To | dbp => kgv |
2015-03-19 10:49 |
|
Status | assigned => feedback |
2015-03-19 20:47 | kgv | Note Added: 0038706 | |
2015-03-19 20:47 | kgv | Assigned To | kgv => bugmaster |
2015-03-19 20:47 | kgv | Status | feedback => reviewed |
2015-03-20 14:27 |
|
Assigned To | bugmaster => apv |
2015-03-20 16:54 | git | Note Added: 0038756 | |
2015-03-20 16:54 |
|
Note Added: 0038757 | |
2015-03-23 17:06 |
|
Test case number | => Not needed |
2015-03-23 17:07 |
|
Note Added: 0038795 | |
2015-03-23 17:07 |
|
Assigned To | apv => bugmaster |
2015-03-23 17:07 |
|
Status | reviewed => tested |
2015-03-27 17:42 | apn | Changeset attached | => occt master 07039714 |
2015-03-27 17:42 | apn | Assigned To | bugmaster => apn |
2015-03-27 17:42 | apn | Status | tested => verified |
2015-03-27 17:42 | apn | Resolution | open => fixed |
2015-04-09 09:48 | git | Note Added: 0039441 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |