0025652: Visualization, TKOpenGl - RayTracing initialization failures are not properly reported

Logging of GLSL warnings was added in ray-tracing core.